WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274327
[JSC] Fix jitCompileSIMDFunction when recompiling the same function with a compiled replacement in different mode
https://bugs.webkit.org/show_bug.cgi?id=274327
Summary
[JSC] Fix jitCompileSIMDFunction when recompiling the same function with a co...
Yijia Huang
Reported
2024-05-17 12:30:21 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yijia Huang
Comment 1
2024-05-17 12:30:34 PDT
<
rdar://128141991
>
Yijia Huang
Comment 2
2024-05-17 12:51:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28726
EWS
Comment 3
2024-05-18 10:28:35 PDT
Committed
278957@main
(b53bf3051822): <
https://commits.webkit.org/278957@main
> Reviewed commits have been landed. Closing PR #28726 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug