Source/JavaScriptCore/wasm/WasmIPIntTierUpCounter.h
@@ -28,7 +28,9 @@
 #if ENABLE(WEBASSEMBLY)
 
 #include "ExecutionCounter.h"
+#include "MemoryMode.h"
 #include "Options.h"
+#include <wtf/FixedVector.h>
 #include <wtf/HashMap.h>
 
 namespace JSC { namespace Wasm {
@@ -40,7 +42,7 @@ class IPIntTierUpCounter : public BaselineExecutionCounter {
 
 public:
     enum class CompilationStatus : uint8_t {
-        NotCompiled,
+        NotCompiled = 0,
         Compiling,
         Compiled,
     };
@@ -55,6 +57,8 @@ public:
         : m_osrEntryData(WTFMove(osrEntryData))
     {
         optimizeAfterWarmUp();
+        m_compilationStatus.fill(CompilationStatus::NotCompiled);
+        m_loopCompilationStatus.fill(CompilationStatus::NotCompiled);
     }
 
     void optimizeAfterWarmUp()
@@ -85,9 +89,15 @@ public:
         return entry->value;
     }
 
+    ALWAYS_INLINE CompilationStatus compilationStatus(MemoryMode mode) { return m_compilationStatus[static_cast<MemoryModeType>(mode)]; }
+    ALWAYS_INLINE void setCompilationStatus(MemoryMode mode, CompilationStatus status) { m_compilationStatus[static_cast<MemoryModeType>(mode)] = status; }
+
+    ALWAYS_INLINE CompilationStatus loopCompilationStatus(MemoryMode mode) { return m_loopCompilationStatus[static_cast<MemoryModeType>(mode)]; }
+    ALWAYS_INLINE void setLoopCompilationStatus(MemoryMode mode, CompilationStatus status) { m_loopCompilationStatus[static_cast<MemoryModeType>(mode)] = status; }
+
     Lock m_lock;
-    CompilationStatus m_compilationStatus { CompilationStatus::NotCompiled };
-    CompilationStatus m_loopCompilationStatus { CompilationStatus::NotCompiled };
+    std::array<CompilationStatus, numberOfMemoryModes> m_compilationStatus;
+    std::array<CompilationStatus, numberOfMemoryModes> m_loopCompilationStatus;
     HashMap<IPIntPC, OSREntryData> m_osrEntryData;
 };
 
